# connman-ui

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  TODO  autogen.sh  bootstrap  bootstrap-configure  clean.sh  configure.ac
data/icons/: ICONS_LICENSE
data/ui/: agent.ui  left_menu.ui  right_menu.ui  settings.ui  tray.ui
gdbus/: watch.c
include/: version.h.in
lib/: agent.c  connman-interface.h  connman-private.h  cui-dbus.h  dbus.c  interface.c  manager.c  service.c  technology.c  utils.c
m4/: ChangeLog
po/: LINGUAS  Makefile.in.in  POTFILES.in  de.po  es.po  fr.po  zh_CN.po  zh_HK.po  zh_TW.po
src/: agent_dialogs.c  connman-ui-gtk.h  gtkservice.c  gtkservice.h  gtktechnology.c  gtktechnology.h  left-menu.c  main.c  right-menu.c  settings.c  theme.c  tray.c  utils.c
